--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </p>
   </section>
 
-  <section class="imagem">
+  <section class="imagem" id="cartas">
     <p>
       Tenho saudade das cartas <br>
       Escritas com a própria mão <br>
