--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
       E um coração desenhado.
     </p>
   </section>
-
   <section class="normal">
     <p>
       Arroba agora não pesa <br>
@@ -46,7 +45,6 @@
       Se o saite é muito bom <br>
       Ele vale um alto preço.
     </p>
-
     <p>
       Pra piorar a liguagem <br>
       O emoticom é um risco <br>
@@ -58,7 +56,7 @@
     </p>
   </section>
 
-  <section class="imagem" id="cartas">
+  <section class="imagem" id="carta">
     <p>
       Tenho saudade das cartas <br>
       Escritas com a própria mão <br>
@@ -69,7 +67,6 @@
       Nas linhas do coração.
     </p>
   </section>
-
   <section class="normal">
     <p>
       Agora, escrevo e envio <br>
@@ -91,9 +88,8 @@
       Deixe que Deus interprete.
     </p>
   </section>
-
   <footer>
-    <p>site criado por <a href="https://github.com/Dayaslva" target="_blank">Dayane Silva</a> para o CursoemVideo</p>
+    <p class="rodape">site criado por <a href="https://github.com/Dayaslva">Dayane</a></p>
   </footer>
 </body>
 </html>
