atualização do target no footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </p>
   </section>
   <footer>
-    <p class="rodape">site criado por <a href="https://github.com/Dayaslva">Dayane</a></p>
+    <p class="rodape">site criado por <a href="https://github.com/Dayaslva" target="_blank">Dayane</a></p>
   </footer>
 </body>
 </html>
